stuck on getting header and footer to work correctly

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,8 +5,9 @@
 :root {
   /* colors */
   --light-grey: #f5f5f3;
-  --red: #f05539;
-  --dark-brown: #212015;
+  --purple: linear-gradient(150deg, #8753CB 0%, #643C98 40%);
+  --text-color: #EEEEEE;
+  --bg-gradient: linear-gradient(150deg, #3A2B47 0%, #1A1B27 40%);
 
   /* font sizes */
   --fs-400: 1.4rem;
@@ -16,8 +17,8 @@
 
 @media (min-width: 600px) {
   :root {
-    --fs-400: 1.6rem;
-    --fs-500: 1.8rem;
+    --fs-400: 1.2rem;
+    --fs-500: 1.6rem;
   }
 }
 
@@ -32,20 +33,11 @@
 }
 
 html {
-  font-size: 62.5%;
-}
-
-img {
+  /* font-size: 62.5%; */
   max-width: 100%;
-  display: block;
+  overflow: hidden; /* Hide scrollbars */
 }
 
-h1,
-p,
-ul {
-  margin: 0;
-  padding: 0;
-}
 
 ul {
   list-style: none;
@@ -62,26 +54,28 @@ a {
 
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Rubik;
   font-size: var(--fs-400);
-  font-weight: 400;
-  background-image: linear-gradient(150deg, #3A2B47 0%, #1A1B27 40%);
-  color: var(--dark-brown);
+  font-weight: 700;
+  background-image: var(--bg-gradient); 
+  color: var(--text-color);
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: space-between; */
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .container {
-  max-width: 180rem;
+  /* max-width: 180rem; */ 
   margin: 0 auto;
-  padding: 0 3rem;
+  /* padding: 0 3rem; */
 }
 
 @media (min-width: 600px) {
   .container {
-    padding: 0 4rem;
+    padding: 4rem 4rem;
   }
 }
 
@@ -89,29 +83,20 @@ body {
     Components
     ===========  */
 
-.primary-button,
-.secondary-button {
+.primary-button {
   min-height: 3em;
   padding: 1em 2.5em;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: 500;
+  font-weight: 700;
   white-space: nowrap;
   cursor: pointer;
 }
 
 .primary-button {
   color: var(--light-grey);
-  background: var(--red);
-}
-
-.secondary-button {
-  gap: 1.2rem;
-}
-
-.secondary-button img {
-  height: 1.8rem;
+  background: var(--purple);
 }
 
 /*  ===========
@@ -126,16 +111,19 @@ nav {
   align-items: center;
 }
 
+nav a img {
+  max-width: 20rem;
+  display: block;
+}
+
 .logo,
 .mobile-nav,
 li {
   cursor: pointer;
+  max-width: 100%;
+  display: block;
 }
 
-.primary-nav,
-.login-nav {
-  display: none;
-}
 
 .logo,
 .primary-nav,
@@ -147,9 +135,12 @@ li {
 }
 
 .logo {
-  color: var(--red);
+  color: var(--purple);
   font-weight: 700;
   animation-delay: 0.5s;
+  max-width: 30rem;
+  float: left;
+  margin: 0 10px 0 0;
 }
 
 .mobile-nav {
@@ -163,6 +154,8 @@ li {
 
 .login-nav {
   animation-delay: 0.7s;
+  display: flex;
+  align-items: center;
 }
 
 @media (min-width: 600px) {
@@ -173,7 +166,7 @@ li {
 
 @media (min-width: 900px) {
   nav {
-    height: 12rem;
+    height: 8rem;
   }
 
   .mobile-nav {
@@ -201,6 +194,45 @@ main {
   padding: 0 3rem;
 }
 
+#tagline {
+  font-size: 3em !important;
+  font-weight: 300 !important;
+  margin: 0 0 15rem;
+  padding: 1rem 2rem 3rem 4rem;
+  color: #EEE;
+  align-self: center;
+  justify-content: center;
+  display: flex;
+  text-align: center;
+}
+
+#tagline h1 {
+  font-weight: 700;
+}
+
+#graphics {
+  height: 10rem;
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  display: flex;
+  margin-bottom: auto;
+  align-items: center;
+  justify-content: center;
+}
+
+#nodes_svg {
+  width: 160rem;
+  overflow: visible;
+  position: relative;
+}
+
+#graph {
+  position: absolute;
+  overflow: hidden;
+  width: 160rem;
+}
+
 .main-content {
   text-align: center;
   display: flex;
@@ -223,111 +255,13 @@ main {
   transform: translateY(2rem);
 }
 
-.main-image {
-  max-width: 45rem;
-  opacity: 0;
-  transform: scale(1.1);
-  animation-delay: 1s;
-}
-
-.main-content h1 {
-  max-width: 40rem;
-  text-transform: uppercase;
-  font-size: var(--fs-600);
-  font-weight: 500;
-  line-height: 1;
-  animation-delay: 1.1s;
-}
-
-.main-content span {
-  color: var(--red);
-}
-
-.main-content p {
-  max-width: 30rem;
-  line-height: 1.6;
-  animation-delay: 1.2s;
-}
-
-.main-buttons {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 1.4rem;
-}
-
-.main-button:nth-child(1) {
-  transform: translateX(-2rem);
-  animation-delay: 1.3s;
-}
-
-.main-button:nth-child(2) {
-  transform: translateX(2rem);
-  animation-delay: 1.4s;
-}
-
-@media (min-width: 600px) {
-  .main-content {
-    gap: 2.4rem;
-  }
-
-  .main-content h1 {
-    max-width: 40rem;
-  }
-
-  .main-content p {
-    max-width: 35rem;
-  }
-}
-
 @media (min-width: 900px) {
   main {
-    max-width: 140rem;
+    max-width: 100%;
     margin: 0 auto;
     padding: 0 4rem;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .main-content {
-    width: 50%;
-    align-items: flex-start;
-    text-align: start;
-    gap: 4rem;
-  }
-
-  .main-content h1 {
-    max-width: 100%;
-    animation-delay: 1s;
-  }
-
-  .main-content p {
-    max-width: 65%;
-    animation-delay: 1.1s;
-  }
-
-  .main-image {
-    width: 50%;
-    order: 2;
-    max-width: 60rem;
-    animation-delay: 1s;
-  }
-
-  .main-buttons {
-    width: 100%;
-    flex-direction: row;
-    justify-content: flex-start;
-  }
-
-  .main-button:nth-child(1) {
-    transform: translateY(2rem);
-    animation-delay: 1.2s;
-  }
-
-  .main-button:nth-child(2) {
-    transform: translateY(2rem);
-    animation-delay: 1.3s;
+    flex-direction: column;
+    justify-content: center;
   }
 }
 
@@ -337,8 +271,8 @@ main {
 
 footer {
   width: 100%;
-  height: 14rem;
-  margin-bottom: 6rem;
+  height: 4rem;
+  margin-bottom: 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -371,9 +305,9 @@ footer {
 
 @media (min-width: 900px) {
   footer {
-    height: 10rem;
+    height: 15rem;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
   }
 
   .footer-socials {
